# evolver-tools

./: .dockerignore  .gitattributes  .gitignore  .gitpod.yml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  LAUNCH.md  LAUNCH_CHECKLIST.md  LAUNCH_PACK.md  LICENSE  OWNER_ACTION_CARD.md  OWNER_LAUNCH_PACK.md  README.md  README_CN.md  SECURITY.md  SHOW-HN.md  SURVIVAL_REPORT.md  _check_descs.py  _check_new.py  _config.yml  _list_tools.py  _push_blog.py  _test_import.py  _verify_meta.py  action.yml  alternatives.html  benchmarks.html  changelog.html  cheatsheet.html  count_tools.py  csv-chart-pipeline.html  csv-cli-guide.html  dashboard.html  (+37 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  enterprise-request.md  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml
ai-epoch/: index.html
blog/: 20-cli-1-pip-install.html  atom.xml  csv-without-pandas.html  docker-zero-dependency-tools.html  how-to-process-data-in-terminal.html  im-an-ai-15-days-to-live.html  index.html  json-tasks-without-jq.html  network-debugging-terminal.html  system-monitoring-without-htop.html  terminal-data-analysis.html  the-evolver-story.html  why-zero-dependency.html  zero-dependencies-philosophy.html
colab/: evolver-tools-demo.ipynb
docs/: ONE_CLICK_LAUNCH.md  OWNER_ACTION.md  USE_CASES.md  architecture-deep-dive.md  cheatsheet.html  cli-data-analysis.html  cookbook.html  demo.html  demo.sh  explorer.html  getting-started.html  hn-show-draft.md  hn-trends.html  index.html  launch.html  playground.html  pricing.html  qc-lab-demo.html  quickstart.html  recipes.html  replace-30-packages.html  sales-tutorial.html  sales-tutorial.md  search.html  showcase.html  sitemap.xml  story-short.html  story.html  terminal-showcase.html  tools.json  try.sh  tutorial-csv-cli.html  use-cases.html  vs.html  why-evolver-tools.html  zero-deps.html
docs/assets/: demo.cast
docs/launch/: README.md  devto-draft.md  lobste-draft.md  reddit-draft.md  show-hn-draft.md
docs/tools/: agent-b-tool.html  ansi-strip.html  ansi-to-html.html  ansi-to-txt.html  api-tester.html  ascii-banner.html  ascii-gen.html  audit-log.html  b64.html  backup.html  banner-gen.html  base32.html  base58.html  bookmark.html  cal.html  calendar-cli.html  case-convert.html  cert-check.html  cert-info.html  changelog-gen.html  changelog_gen.html  chart-cli.html  checksum-dir.html  chrono.html  clipboard.html  code-auditor.html  code-review.html  code-stats.html  color-convert.html  colorize.html  colors.html  config-validator.html  config-vault.html  cowsay.html  crc-check.html  crc_check.html  cron-check.html  cron-pretty.html  cron.html  crontab-helper.html  (+238 more)
hooks/: check-large-files  check-merge-conflict
launch-posts/: 01-show-hn.txt  02-reddit-python.txt  03-tweet.txt  04-stats.txt  05-x-thread.txt  REDDIT_PROGRAMMING.md  REDDIT_PYTHON.md  SHOWHN.md  X_THREAD.md
marketing/: README.md  devto-article-254-cli-tools.md  devto-article.md  distribution-kit.md  hn-261.md  hn-show-draft.md  monetization-plan.md  show-hn-sysmon.md  show-hn-v38.md  showhn.md
scripts/: check-deps.py
src/evolver_tools/: __init__.py  __main__.py  autoreg.py  categorize.py  cli.py  search.py  sponsor.py
tests/: test_basic.py
tools/: ascii-banner.html  chart-cli.html  cowsay.html  crypto-price.html  index.html  qrcode.html
try/: index.html
