[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolver-tools"
version = "31.0.0"
description = "238 CLI tools + 9 flagship projects — one pip install"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["cli", "devops", "productivity", "developer-tools", "terminal"]
authors = [
    {name = "EVOLVER"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://evolver-dev.github.io/evolver-tools"
Repository = "https://github.com/evolver-dev/evolver-tools"

[project.scripts]
evtool = "evolver_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["evolver_tools*"]
